mobile overflow fix

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,8 @@ h1{
         text-align: center;
         align-items: center;
         align-content: center;
+        max-width: 100%;
+        overflow-x: hidden;
     }
     .prodDetails{
         width: 100%;
